英語フランス語ページ

--- a/english/access-en.html
+++ b/english/access-en.html
@@ -2,81 +2,83 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header-en.css">
-    <link rel="stylesheet" href="../css/style-en.css">
-    <title>Access</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header-en.css">
+  <link rel="stylesheet" href="../css/style-en.css">
+  <link rel="stylesheet" href="../css/access-en.css">
+  <title>Access</title>
 </head>
 
 <body>
-    <!--ヘッダー-->
-    <header class="page-header">
-        <div class="page-header__SchoolMark">
-            <div class="SchoolMark__logo">
-                <img src="../img/SchoolMark2.png" alt="SchoolMark">
-            </div>
-        </div>
-        <div class="page-header__lang">
-            <button class="lang-EN" type="button" onclick="en()">　</button>
-            <button class="lang-JP" type="button" onclick="ja()">　</button>
-            <button class="lang-FR" type="button" onclick="fr()">　</button>
-        </div>
-        <nav class="page-header__menu">
-            <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
-            </ol>
-        </nav>
-    </header>
-    <!--メイン-->
-    <main class="page-main">
-      <h1>How to access</h1>
+  <!--ヘッダー-->
+  <header class="page-header">
+    <div class="page-header__SchoolMark">
+      <div class="SchoolMark__logo">
+        <img src="../img/SchoolMark2.png" alt="SchoolMark">
+      </div>
+    </div>
+    <div class="page-header__lang">
+      <button class="lang-EN" type="button" onclick="en()">　</button>
+      <button class="lang-JP" type="button" onclick="ja()">　</button>
+      <button class="lang-FR" type="button" onclick="fr()">　</button>
+    </div>
+    <nav class="page-header__menu">
+      <ol>
+        <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
+        <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
+        <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a></li>
+        <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a></li>
+        <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
+        <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
+        <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
+      </ol>
+    </nav>
+  </header>
+  <!--メイン-->
+  <main class="page-main">
+    <div class="main-inner">
+      <div class="page-main__header">
+        <h1 class="page-submain__header">How to access</h1>
+      </div>
       <div class="access">
-        <h2>For people coming by transportation</h2>
-        <p>Located in Acton, West London Ealing London.
-           Located approximately 45 minutes from central London. The area is very secure and many foreigners live there.</p>
-        <table border="1">
-          <tbody>
-            <tr>
-              <th rowspan="3">From central London</th>
-              <td>From King's Cross Station, a 4-minute walk from St. Pancras Station,
-                  take Piccadilly Line to Ealing Common Station</td>
-            </tr>
-            <tr>
-              <td>From King's Cross Station, a 4 minutes walk from St. Pancras Station,
-                  take Piccadilly line to Holborn Station.
-                  Change to Central Line to West Acton Station</td>
-            </tr>
-            <tr>
-              <td>From King's Cross Station, a 4 minutes walk from St. Pancras Station,
-                  take the Victoria line to Oxford Circus Station.
-                  Change to Central Line to West Acton Station</td>
-            </tr>
-            <tr>
-              <th>From the airport</th>
-              <td>From Hatton Cross Station, a 3 minute walk from Heathrow Airport,
-                  take Piccadilly Line to Ealing Common Station</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="page-top">
+          <h2 class="page-top_head">For people coming by transportation</h2>
+          <p>Located in Acton, West London Ealing London.<br>
+            Located approximately 45 minutes from central London. The area is very secure and many foreigners live there.
+          </p>
+        </div>
+        <div class="to_school">
+          <div class="London_to_school">  
+            <h3>From central London</h3>
+            From King's Cross Station, a 4-minute walk from St. Pancras Station,
+            take Piccadilly Line to Ealing Common Station <br>
+            From King's Cross Station, a 4 minutes walk from St. Pancras Station,
+            take Piccadilly line to Holborn Station.<br>
+            Change to Central Line to West Acton Station<br>
+            From King's Cross Station, a 4 minutes walk from St. Pancras Station,
+            take the Victoria line to Oxford Circus Station.
+            Change to Central Line to West Acton Station
+          </div>            
+          <div class="airport_to_school">
+            <h3>From the airport</h3>
+            From Hatton Cross Station, a 3 minute walk from Heathrow Airport,
+            take Piccadilly Line to Ealing Common Station
+          </div>
+        </div>
       </div>
       <div class="figure">
         <img src="../img/access/access_en.jpg" alt="図">
       </div>
       <div class="map">
         <h2>School location</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9698255305616!2d-0.2827718842297865!3d51.51376957963617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f25!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2sThe%20Japanese%20School%20Ltd!5e0!3m2!1sen!2suk!4v1583942987555!5m2!1sen!2suk"
-          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9698255305616!2d-0.2827718842297865!3d51.51376957963617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f25!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2sThe%20Japanese%20School%20Ltd!5e0!3m2!1sen!2suk!4v1583942987555!5m2!1sen!2suk"
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
-    </main>
-    <!--フッター-->
-    <footer class="page-footer"></footer>
+    </div>
+  </main>
+  <!--フッター-->
+  <footer class="page-footer"></footer>
 </body>
 <script src="../header.js"></script>
 
