--- a/french/access-fr.html
+++ b/french/access-fr.html
@@ -2,69 +2,70 @@
 <html lang="fr">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header-en.css">
-    <link rel="stylesheet" href="../css/style-fr.css">
-    <title>Accès</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header-en.css">
+  <link rel="stylesheet" href="../css/style-fr.css">
+  <link rel="stylesheet" href="../css/access-fr.css">
+  <title>Accès</title>
 </head>
 
 <body>
-    <!--ヘッダー-->
-    <header class="page-header">
-        <div class="page-header__SchoolMark">
-            <div class="SchoolMark__logo">
-                <img src="../img/SchoolMark2.png" alt="SchoolMark">
-            </div>
-        </div>
-        <div class="page-header__lang">
-            <button class="lang-EN" type="button" onclick="en()">　</button>
-            <button class="lang-JP" type="button" onclick="ja()">　</button>
-            <button class="lang-FR" type="button" onclick="fr()">　</button>
-        </div>
-        <nav class="page-header__menu">
-            <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-fr.html">Accueil</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel scolaire</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
-            </ol>
-        </nav>
-    </header>
-    <!--メイン-->
-    <main class="page-main">
-      <h1>Comment accéder</h1>
+  <!--ヘッダー-->
+  <header class="page-header">
+    <div class="page-header__SchoolMark">
+      <div class="SchoolMark__logo">
+        <img src="../img/SchoolMark2.png" alt="SchoolMark">
+      </div>
+    </div>
+    <div class="page-header__lang">
+      <button class="lang-EN" type="button" onclick="en()">　</button>
+      <button class="lang-JP" type="button" onclick="ja()">　</button>
+      <button class="lang-FR" type="button" onclick="fr()">　</button>
+    </div>
+    <nav class="page-header__menu">
+      <ol>
+        <li class="menu-index menu" id="header-menu-index"><a href="index-fr.html">Accueil</a></li>
+        <li class="menu-intro menu" id="header-menu-intro"><a href="intro-fr.html">Introduction à l'école</a></li>
+        <li class="menu-content menu" id="header-menu-content"><a href="content-fr.html">Contenu pédagogique</a></li>
+        <li class="menu-facility menu" id="header-menu-facility"><a href="facility-fr.html">Matériel scolaire</a></li>
+        <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-fr.html">Examen d'entrée</a></li>
+        <li class="menu-access menu" id="header-menu-access"><a href="access-fr.html">Accès</a></li>
+        <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-fr.html">Enquête</a></li>
+      </ol>
+    </nav>
+  </header>
+  <!--メイン-->
+  <main class="page-main">
+    <div class="main-inner">
+      <div class="page-main__header">
+        <h1 class="page-submain__header">Comment accéder</h1>
+      </div>
       <div class="access">
-        <h2>Fou des personnes venant en transport</h2>
-        <p>Situé à Acton, West London Ealing London.
-            Situé à environ 45 minutes du centre de Londres. Le quartier est très sécurisé et de nombreux étrangers y vivent.</p>
-        <table border="1">
-          <tbody>
-            <tr>
-              <th rowspan="3">From central London</th>
-              <td>Depuis la gare de King's Cross, à 4 minutes à pied de la gare de St. Pancras,
-                   prendre la ligne Piccadilly jusqu'à la station Ealing Common</td>
-            </tr>
-            <tr>
-              <td>Depuis la gare de King's Cross, à 4 minutes à pied de la gare de St. Pancras,
-                   prendre la ligne Piccadilly jusqu'à Holborn Station.
-                   Changement de Central Line à West Acton Station</td>
-            </tr>
-            <tr>
-              <td>Depuis la gare de King's Cross, à 4 minutes à pied de la gare de St. Pancras,
-                   prenez la ligne Victoria jusqu'à la station Oxford Circus.
-                   Changement de Central Line à West Acton Station</td>
-            </tr>
-            <tr>
-              <th>Depuis l'aéroport</th>
-              <td>Depuis la gare de Hatton Cross, à 3 minutes à pied de l'aéroport d'Heathrow,
-                   prendre la ligne Piccadilly jusqu'à la station Ealing Common</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="page-top">
+          <h2 class="page-top_head">Fou des personnes venant en transport</h2>
+          <p>Situé à Acton, West London Ealing London.<br>
+            Situé à environ 45 minutes du centre de Londres. Le quartier est très sécurisé et de nombreux étrangers y vivent.
+          </p>
+        </div>
+        <div class="to_school">
+          <div class="London_to_school">  
+            <h3>From central London</h3>
+            Depuis la gare de King's Cross, à 4 minutes à pied de la gare de St. Pancras,
+            prendre la ligne Piccadilly jusqu'à la station Ealing Common<br>
+            Depuis la gare de King's Cross, à 4 minutes à pied de la gare de St. Pancras,
+            prendre la ligne Piccadilly jusqu'à Holborn Station.<br>
+            Changement de Central Line à West Acton Station<br>
+            Depuis la gare de King's Cross, à 4 minutes à pied de la gare de St. Pancras,<br>
+            prenez la ligne Victoria jusqu'à la station Oxford Circus.<br>
+            Changement de Central Line à West Acton Station<br>
+          </div>            
+          <div class="airport_to_school">
+            <h3>Depuis l'aéroport</h3>
+            Depuis la gare de Hatton Cross, à 3 minutes à pied de l'aéroport d'Heathrow,<br>
+            prendre la ligne Piccadilly jusqu'à la station Ealing Common<br>
+          </div>
+        </div>
       </div>
       <div class="figure">
         <img src="../img/access/access_fr.jpg" alt="図">
@@ -72,12 +73,15 @@
       <div class="map">
         <h2>Emplacement de l'école</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.9698255305616!2d-0.2827718842297865!3d51.51376957963617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f25!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2sThe%20Japanese%20School%20Ltd!5e0!3m2!1sfr!2suk!4v1584103311961!5m2!1sfr!2suk"
-         width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
       </div>
-    </main>
-    <!--フッター-->
-    <footer class="page-footer"></footer>
+    </div>
+  </main>
+  <!--フッター-->
+  <footer class="page-footer"></footer>
 </body>
 <script src="../header.js"></script>
 
 </html>
+
+
