--- a/japanese/access-ja.html
+++ b/japanese/access-ja.html
@@ -46,63 +46,40 @@
           <h2 class="page-top_head">交通機関でお越しの方へ</h2>
           <p>ロンドン西部イーリング・ロンドン特別区であるアクトン(Acton)に位置<br>
             ロンドン中心部からおよそ45分の場所に立地<br>
-            この地域は治安が非常によく、日本人も多数住んでいます</p>
-          </div>
-          <div class="to_school">
-            <div class="London_to_school">              
-              <h3>ロンドン中心地から</h3>
-              セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
-              ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで<br>
-              セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
-              ピカデリー線(Piccadilly Line)でホルボーン駅(Holborn)まで<br>
-              セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)までセント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
-              ヴィクトリア線(Victoria Line)でオックスフォード・サーカス駅(Oxford Circus)まで<br>
-              セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)まで<br>
-              <div class="airport_to_school">
-                <h3>空港から</h3>
-                ヒースロー空港から徒歩3分ハットンクロス駅(Hatton Cross)より
-                ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで
-              </div>
-            </div>            
-          </div>
+            この地域は治安が非常によく、日本人も多数住んでいます
+          </p>
         </div>
-        <div class="figure">
-          <img src="../img/access/access.jpg" alt="図">
-        </div>
-        <div class="map">
-          <h2>本学立地</h2>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
-          width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        <div class="to_school">
+          <div class="London_to_school">              
+            <h3>ロンドン中心地から</h3>
+            セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
+            ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで<br>
+            セント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
+            ピカデリー線(Piccadilly Line)でホルボーン駅(Holborn)まで<br>
+            セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)までセント・パンクラス駅(St. Pancras)から徒歩4分キングス・クロス駅(King's Cross)より
+            ヴィクトリア線(Victoria Line)でオックスフォード・サーカス駅(Oxford Circus)まで<br>
+            セントラル線(Central Line)に乗り換えウエストアクトン駅(West Acton)まで<br>
+          </div>            
+          <div class="airport_to_school">
+            <h3>空港から</h3>
+            ヒースロー空港から徒歩3分ハットンクロス駅(Hatton Cross)より
+            ピカデリー線(Piccadilly Line)でイーリングコモン駅(Ealing Common)まで
+          </div>
         </div>
       </div>
-    </main>
-    <!--フッター-->
-    <footer class="page-footer"></footer>
-  </body>
-  <script src="../header.js"></script>
-  
-  </html>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+      <div class="figure">
+        <img src="../img/access/access.jpg" alt="図">
+      </div>
+      <div class="map">
+        <h2>本学立地</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4010.3314678545985!2d-0.2827834859472339!3d51.51414552059801!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f20!3m3!1m2!1s0x48760e001303304f%3A0xb1ae25fda0c30ea9!2z44Ot44Oz44OJ44Oz5pel5pys5Lq65a2m5qCh!5e0!3m2!1sja!2sfr!4v1583744827474!5m2!1sja!2sfr"
+        width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      </div>
+    </div>
+  </main>
+  <!--フッター-->
+  <footer class="page-footer"></footer>
+</body>
+<script src="../header.js"></script>
+
+</html>
