--- a/english/inquiry-en.html
+++ b/english/inquiry-en.html
@@ -2,95 +2,103 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/header-en.css">
-    <link rel="stylesheet" href="../css/style-en.css">
-    <title>Inquiry</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/header-en.css">
+  <link rel="stylesheet" href="../css/style-en.css">
+  <link rel="stylesheet" href="../css/inquiry.css">
+  <title>Inquiry</title>
 </head>
 
 <body>
-    <!--ヘッダー-->
-    <header class="page-header">
-        <div class="page-header__SchoolMark">
-            <div class="SchoolMark__logo">
-                <img src="../img/SchoolMark2.png" alt="SchoolMark">
+  <!--ヘッダー-->
+  <header class="page-header">
+    <div class="page-header__SchoolMark">
+      <div class="SchoolMark__logo">
+        <img src="../img/SchoolMark2.png" alt="SchoolMark">
+      </div>
+    </div>
+    <div class="page-header__lang">
+      <button class="lang-EN" type="button" onclick="en()">　</button>
+      <button class="lang-JP" type="button" onclick="ja()">　</button>
+      <button class="lang-FR" type="button" onclick="fr()">　</button>
+    </div>
+    <nav class="page-header__menu">
+      <ol>
+        <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
+        <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
+        <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a></li>
+        <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a></li>
+        <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
+        <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
+        <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
+      </ol>
+    </nav>
+  </header>
+  <!--メイン-->
+  <main class="page-main">
+    <div class="main-inner">
+      <div class="margin-left">
+        <div>
+          <div class="page-main__header">
+            <h1 class="page-submain__header">Inquiry</h1>
+          </div>
+        </div>
+        <div>
+          <div class="text-top">
+            <p>If you are interested in our school, please feel free to contact us. Once you have entered the required information,
+              we will send you the school's admission materials.
+            </p>
+          </div>
+          <div class="text-top">
+            <h2>Phone number</h2>
+            <p>☏123-4567-8901</p>
+          </div>
+          <div class="siryo-seikyu-">
+            <h2>Document request</h2>
+            <div class="form">
+              <form name="fome1" action="" method="post">
+                <div class="form_name">
+                  <label for="name">Name：</label>
+                  <input type="text" required id="name" name="user_name" placeholder="Harry London">
+                </div>
+                <div class="form_mail">
+                  <label for="email">Email：</label>
+                  <input type="email" required id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
+                </div>
+                <div class="form_msg">
+                  <label for="msg">Message：</label>
+                  <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
+                </div>
+                <div class="form_button">
+                  <input type="button" id="btn" value="Send Message" onclick="sendMessage()">
+                  <script type="text/javascript">
+                  function sendMessage() {
+                    var name = document.getElementById('name').value;
+                    var email = document.getElementById('email').value;
+                    var msg = document.getElementById('msg').value;
+                    /*--デバック用コンソール--
+                    console.log(name);
+                    console.log(email);
+                    console.log(msg);
+                    -------------------------*/
+                    if (name == "" || email == "") {
+                      var message = String("Name and Email are required fields");
+                    } else {
+                      var message = String("name : " + name + "\nEmail : " + email + "\n\n---message---\n" + msg + "\n----------------\n" + "\n以上の内容で送信しました。");
+                    }
+                    alert(message);
+                  }
+                  </script>
+                </div>
+              </form>
             </div>
-        </div>
-        <div class="page-header__lang">
-            <button class="lang-EN" type="button" onclick="en()">　</button>
-            <button class="lang-JP" type="button" onclick="ja()">　</button>
-            <button class="lang-FR" type="button" onclick="fr()">　</button>
-        </div>
-        <nav class="page-header__menu">
-            <ol>
-                <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
-                <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
-                <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
-                <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
-            </ol>
-        </nav>
-    </header>
-    <!--メイン-->
-    <main class="page-main">
-      <div>
-          <h1>Inquiry</h1>
-      </div>
-      <div>
-          <p>If you are interested in our school, please feel free to contact us. Once you have entered the required information,
-            we will send you the school's admission materials.</p>
-          <div>
-              <h2>Phone number</h2>
-              <p>☏123-4567-8901</p>
           </div>
-          <div>
-              <h2>Document request</h2>
-              <div class="form">
-                  <form name="fome1" action="" method="post">
-                      <div class="form_name">
-                          <label for="name">Name：</label>
-                          <input type="text" required id="name" name="user_name" placeholder="Harry London">
-                      </div>
-                      <div class="form_mail">
-                          <label for="email">Email：</label>
-                          <input type="email" required id="email" name="user_email" placeholder="XXXX@YYY.ZZZ">
-                      </div>
-                      <div class="form_msg">
-                          <label for="msg">Message：</label>
-                          <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
-                      </div>
-                      <div class="form_button">
-                          <input type="button" id="btn" value="Send Message" onclick="sendMessage()">
-                          <script type="text/javascript">
-                              function sendMessage() {
-                                  var name = document.getElementById('name').value;
-                                  var email = document.getElementById('email').value;
-                                  var msg = document.getElementById('msg').value;
-                                  /*--デバック用コンソール--
-                                  console.log(name);
-                                  console.log(email);
-                                  console.log(msg);
-                                  -------------------------*/
-                                  if (name == "" || email == "") {
-                                      var message = String("Name and Email are required fields");
-                                  } else {
-                                      var message = String("name : " + name + "\nEmail : " + email + "\n\n---message---\n" + msg + "\n----------------\n" + "\n以上の内容で送信しました。");
-                                  }
-                                  alert(message);
-                              }
-                          </script>
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-    </main>
-    <!--フッター-->
-    <footer class="page-footer"></footer>
-</body>
-<script src="../header.js"></script>
-
-</html>
+        </div>
+      </main>
+      <!--フッター-->
+      <footer class="page-footer"></footer>
+    </body>
+    <script src="../header.js"></script>
+    
+    </html>
