--- a/japanese/inquiry-ja.html
+++ b/japanese/inquiry-ja.html
@@ -37,17 +37,19 @@
   </header>
   <!--メイン-->
   <main class="page-main">
-    <div class="margin-left">
-      <div>
-        <div class="page-main__header">
-          <h1 class="page-submain__header">お問い合わせ</h1>
+    <div class="main-inner">
+      <div class="margin-left">
+        <div>
+          <div class="page-main__header">
+            <h1 class="page-submain__header">お問い合わせ</h1>
+          </div>
         </div>
-      </div>
-      <div>
-        <div class="text-top">
-          <p>本校に興味がある方はお気軽にお問い合わせください。<br>
-            必要事項をご入力いただきますと、本校の入学資料を送付いたします。</p>
-        </div>
+        <div>
+          <div class="text-top">
+            <p>本校に興味がある方はお気軽にお問い合わせください。<br>
+              必要事項をご入力いただきますと、本校の入学資料を送付いたします。
+            </p>
+          </div>
           <div class="phone-number">
             <h2>電話番号</h2>
             <p>☏123-4567-8901</p>
@@ -66,7 +68,7 @@
                 </div>
                 <div class="form_msg">
                   <legend aligen="top"><label for="msg">Message：</label></legend>
-
+                  
                   <textarea id="msg" name="user_message" placeholder="Please write freely"></textarea>
                 </div>
                 <div class="form_button">
@@ -95,10 +97,18 @@
           </div>
         </div>
       </div>
-    </main>
-    <!--フッター-->
-    <footer class="page-footer"></footer>
-  </body>
-  <script src="../header.js"></script>
+    </div>
+  </main>
+  <!--フッター-->
+  <footer class="page-footer"></footer>
+</body>
+<script src="../header.js"></script>
 
-  </html>
+</html>
+
+
+
+
+
+
+
