--- a/english/comment-en.html
+++ b/english/comment-en.html
@@ -40,8 +40,8 @@
         <div class="form">
             <form name="form" action="" method="post">
                 <div class="form_nickname">
-                    <label for="nickname">NickName：</label>
-                    <input type="text" required id="nickname" name="user_nickname" placeholder="ロンドン　太郎">
+                    <label for="nickname">Nickname：</label>
+                    <input type="text" required id="nickname" name="user_nickname" placeholder="Harry London">
                 </div>
                 <div class="form_comment">
                     <label for="comment">Comment：</label>
@@ -58,10 +58,10 @@
                             console.log(comment);
                             -------------------------*/
                             if (nickname == "" || comment == "") {
-                                var message = String("NickNameとCommentは必須項目です。");
+                                var message = String("NickName and Comment are required fields.");
                             } else {
                                 var date = new Date();
-                                var message = String("name : " + nickname + "\n---comment---\n" + comment + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                var message = String("name : " + nickname + "\n---comment---\n" + comment + "\n----------------\n" + "\nSent with the above contents.");
                                 var sendMessage = String("<br>name : " + nickname + "<br>comment :" + comment + "<br>");
                             }
                             alert(message);
@@ -80,10 +80,10 @@
             <hr>
             <br>
             <div>
-                <h2>コメント欄</h2>
+                <h2>Comment field</h2>
             </div>
             <div>
-                <div id="update">なにか書き込んでください！<br></div>
+                <div id="update">Please write something!<br></div>
             </div>
         </div>
     </main>
