--- a/french/comment-fr.html
+++ b/french/comment-fr.html
@@ -44,15 +44,15 @@
         <div class="form">
             <form name="form" action="" method="post">
                 <div class="form_nickname">
-                    <label for="nickname">NickName：</label>
-                    <input type="text" required id="nickname" name="user_nickname" placeholder="ロンドン　太郎">
+                    <label for="nickname">Surnom：</label>
+                    <input type="text" required id="nickname" name="user_nickname" placeholder="Jean Harry">
                 </div>
                 <div class="form_comment">
-                    <label for="comment">Comment：</label>
-                    <textarea id="comment" required name="user_comment" placeholder="Please write freely"></textarea>
+                    <label for="comment">Commentaire：</label>
+                    <textarea id="comment" required name="user_comment" placeholder="Veuillez écrire librement"></textarea>
                 </div>
                 <div class="form_button">
-                    <input type="button" id="btn" value="Send Comment" onclick="sendComment()">
+                    <input type="button" id="btn" value="Envoyer un commentaire" onclick="sendComment()">
                     <script type="text/javascript">
                         function sendComment() {
                             var nickname = document.getElementById('nickname').value;
@@ -62,10 +62,10 @@
                             console.log(comment);
                             -------------------------*/
                             if (nickname == "" || comment == "") {
-                                var message = String("NickNameとCommentは必須項目です。");
+                                var message = String("NickName et Comment sont des champs obligatoires.");
                             } else {
                                 var date = new Date();
-                                var message = String("name : " + nickname + "\n---comment---\n" + comment + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                var message = String("name : " + nickname + "\n---comment---\n" + comment + "\n----------------\n" + "\nEnvoyé avec le contenu ci-dessus.");
                                 var sendMessage = String("<br>name : " + nickname + "<br>comment :" + comment + "<br>");
                             }
                             alert(message);
@@ -84,10 +84,10 @@
             <hr>
             <br>
             <div>
-                <h2>コメント欄</h2>
+                <h2>Champ de commentaire</h2>
             </div>
             <div>
-                <div id="update">なにか書き込んでください！<br></div>
+                <div id="update">Veuillez écrire quelque chose!<br></div>
             </div>
         </div>
     </main>
