--- a/english/comment-en.html
+++ b/english/comment-en.html
@@ -26,9 +26,12 @@
             <ol>
                 <li class="menu-index menu" id="header-menu-index"><a href="index-en.html">HOME</a></li>
                 <li class="menu-intro menu" id="header-menu-intro"><a href="intro-en.html">Introduction</a></li>
-                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a></li>
-                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a></li>
-                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance Examination</a></li>
+                <li class="menu-content menu" id="header-menu-content"><a href="content-en.html">Education Content</a>
+                </li>
+                <li class="menu-facility menu" id="header-menu-facility"><a href="facility-en.html">School Equipment</a>
+                </li>
+                <li class="menu-ex menu" id="header-menu-ex"><a href="entranceExamination-en.html">Entrance
+                        Examination</a></li>
                 <li class="menu-access menu" id="header-menu-access"><a href="access-en.html">Access</a></li>
                 <li class="menu-inquiry menu" id="header-menu-inquiry"><a href="inquiry-en.html">Inquiry</a></li>
                 <li class="menu-comment menu" id="header-menu-comment"><a href="comment-en.html">Comment</a></li>
@@ -76,9 +79,6 @@
                     </script>
                 </div>
             </form>
-            <br>
-            <hr>
-            <br>
             <div>
                 <h2>Comment field</h2>
             </div>
@@ -92,4 +92,5 @@
 </body>
 
 <script src="../header.js"></script>
+
 </html>
