--- a/english/content-en.html
+++ b/english/content-en.html
@@ -72,7 +72,7 @@
                   <h2>Marketing</h2>
                   <p>You learn about marketing, the basis of management. Marketing is "an activity that research the products and
                     services consumers want, and smooth the distribution from producers to consumers by determining the products to be supplied and
-                    the method of sales activities (<a href="https://www.weblio.jp/content/マーケティング" target="_blank" class="content_link">about marketing</a>).
+                    the method of sales activities (<a href="https://en.wikipedia.org/wiki/Marketing" target="_blank" class="content_link">wikipedia</a>).
                     The most important thing in marketing is to understand the market accurately. You may feel it difficult to study,
                     but our teachers will explain with confidence.</p>
                 </div>
@@ -104,7 +104,7 @@
                   <p>Have you ever heard the word e-business? E-business is "to completely digitize business processes by introducing
                     the Internet and related information and communication technologies across all business activities of companies.
                     And it's business activities and commerce,pass such a change and deeply digitized."
-                    (<a href="http://e-words.jp/w/eビジネス.html" target="_blank" class="content_link">about e-business</a>).
+                    (<a href="https://en.wikipedia.org/wiki/Electronic_business" target="_blank" class="content_link">wikipedia</a>).
                     You learn from the importance of e-business and the origin of e-business, and ultimately build a simple e-business mechanism.</p>
                 </div>
               </div>
